remove red boxes from links in pdf
hidelinks option in hyperref

--- a/PSMT.tex
+++ b/PSMT.tex
@@ -1,6 +1,4 @@
-\documentclass{article}
-
-
+\documentclass[a4paper]{article}
 
 \usepackage{pgfplots}
     \pgfplotsset{compat=1.17}
@@ -14,6 +12,11 @@
 \usepackage[style = apa]{biblatex}
     \addbibresource{references.bib}
 \usepackage[breaklinks]{hyperref}
+    \hypersetup{
+        hidelinks,
+        breaklinks=true
+    }
+
 
 \title{Problem Solving and Modelling Task}
 \author{Alexander Arthur}
