more commiy from phone

--- a/PSMT.tex
+++ b/PSMT.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper]{article}
 
 % here is a comment made from my phone
+% here is anither comment fron my phone
 
 \usepackage{pgfplots}
     \pgfplotsset{compat=1.17}
