add table of areas of sections

--- a/PSMT.tex
+++ b/PSMT.tex
@@ -188,6 +188,25 @@
             =& 198.2217
         \end{align*}
 
+    \begin{table}
+        \centering
+        \begin{tabular}{@{}ll@{}}
+        \toprule
+        Section & Area ($m^2$) \\ \midrule
+        1       & 198.22       \\
+        2       & 561.52       \\
+        3       & 311.77       \\
+        4       & 316.16       \\
+        5       & 101.00       \\
+        6       & 218.10       \\
+        7       & 113.73       \\
+        8       & 163.43       \\ \midrule
+        Total   & 2027.93      \\ \bottomrule
+        \end{tabular}
+        \caption{Area by section}
+        \label{tblAreasOfSections}
+    \end{table}
+
         A graphing calculator was used to evaluate Equation \ref{eqnAreaOfLakeFromFuncs} and the area of the lake found to be 2027.93m$^2$.
 
 
